[gd_scene load_steps=35 format=3 uid="uid://ciot5i76nld4m"]

[ext_resource type="Script" uid="uid://cq77ijorbele0" path="res://Lab/BulletHell/BossEntity.gd" id="1_bhu65"]
[ext_resource type="Texture2D" uid="uid://b822f0iko503y" path="res://Lab/Assets/Boss/boss_inside.png" id="2_0bd57"]
[ext_resource type="Texture2D" uid="uid://bhwnm1b4f5xw0" path="res://Lab/Assets/Boss/boss_base.png" id="2_v6qt5"]
[ext_resource type="PackedScene" uid="uid://5tvqunkoa4l7" path="res://Components/Combat/FactionComponent.tscn" id="3_4faen"]
[ext_resource type="Texture2D" uid="uid://dkmm0m2loi27q" path="res://Lab/Assets/Boss/boss_beak.png" id="3_mjr86"]
[ext_resource type="Texture2D" uid="uid://j03583rwwtvp" path="res://Lab/Assets/Boss/boss_panels.png" id="5_7lwut"]
[ext_resource type="PackedScene" uid="uid://bb84q0leewc3" path="res://Lab/BulletHell/BulletEnemyEntity.tscn" id="5_g6b7d"]
[ext_resource type="PackedScene" uid="uid://cnu5f0ycxgu8d" path="res://Components/Combat/HealthComponent.tscn" id="5_sns8m"]
[ext_resource type="PackedScene" uid="uid://ffkcrlcom1kx" path="res://Components/Combat/DamageReceivingComponent.tscn" id="6_c8x7c"]
[ext_resource type="Texture2D" uid="uid://cip13utv0b42u" path="res://Lab/Assets/Boss/boss_top.png" id="6_lxm5q"]
[ext_resource type="PackedScene" uid="uid://cpklu2uieedw7" path="res://Components/Combat/DamageComponent.tscn" id="7_g6b7d"]
[ext_resource type="Script" uid="uid://dif3dj8k5ixfw" path="res://Resources/Stats/Stat.gd" id="7_spm5b"]
[ext_resource type="Texture2D" uid="uid://bl6ir7cf25kmc" path="res://Lab/Assets/Boss/boss_gunn_back.png" id="7_u1ua6"]
[ext_resource type="Texture2D" uid="uid://piagu0uyd2jl" path="res://Lab/Assets/Boss/boss_dog_dome.png" id="8_ka5rd"]
[ext_resource type="Texture2D" uid="uid://cggddguhoxqc6" path="res://Lab/Assets/Boss/boss_mech_fire.png" id="9_xlis3"]
[ext_resource type="PackedScene" uid="uid://dusjndm5o8ehr" path="res://Components/Combat/GunComponent.tscn" id="10_vejfc"]
[ext_resource type="PackedScene" uid="uid://cdq0dcwhcrm5p" path="res://Components/Control/InputComponent.tscn" id="12_5vyxp"]
[ext_resource type="PackedScene" uid="uid://dn7cpj4u7w1jy" path="res://Components/Physics/CharacterBodyComponent.tscn" id="17_v0t4e"]

[sub_resource type="AtlasTexture" id="AtlasTexture_6oqmj"]
atlas = ExtResource("9_xlis3")
region = Rect2(0, 0, 426, 328)

[sub_resource type="AtlasTexture" id="AtlasTexture_jd8t5"]
atlas = ExtResource("9_xlis3")
region = Rect2(426, 0, 426, 328)

[sub_resource type="AtlasTexture" id="AtlasTexture_i21re"]
atlas = ExtResource("9_xlis3")
region = Rect2(852, 0, 426, 328)

[sub_resource type="AtlasTexture" id="AtlasTexture_3a25h"]
atlas = ExtResource("9_xlis3")
region = Rect2(1278, 0, 426, 328)

[sub_resource type="AtlasTexture" id="AtlasTexture_ohi7a"]
atlas = ExtResource("9_xlis3")
region = Rect2(1704, 0, 426, 328)

[sub_resource type="AtlasTexture" id="AtlasTexture_82w71"]
atlas = ExtResource("9_xlis3")
region = Rect2(2130, 0, 426, 328)

[sub_resource type="AtlasTexture" id="AtlasTexture_gm5ee"]
atlas = ExtResource("9_xlis3")
region = Rect2(2556, 0, 426, 328)

[sub_resource type="AtlasTexture" id="AtlasTexture_pbbul"]
atlas = ExtResource("9_xlis3")
region = Rect2(2982, 0, 426, 328)

[sub_resource type="AtlasTexture" id="AtlasTexture_xno4t"]
atlas = ExtResource("9_xlis3")
region = Rect2(3408, 0, 426, 328)

[sub_resource type="AtlasTexture" id="AtlasTexture_s0oq3"]
atlas = ExtResource("9_xlis3")
region = Rect2(3834, 0, 426, 328)

[sub_resource type="AtlasTexture" id="AtlasTexture_f85ud"]
atlas = ExtResource("9_xlis3")
region = Rect2(4260, 0, 426, 328)

[sub_resource type="AtlasTexture" id="AtlasTexture_07ofg"]
atlas = ExtResource("9_xlis3")
region = Rect2(4686, 0, 426, 328)

[sub_resource type="SpriteFrames" id="SpriteFrames_qgdtj"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6oqmj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jd8t5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i21re")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3a25h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ohi7a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_82w71")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gm5ee")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pbbul")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xno4t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s0oq3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f85ud")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_07ofg")
}],
"loop": true,
"name": &"default",
"speed": 12.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8iuf5"]
size = Vector2(194, 302)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_alspo"]
resource_local_to_scene = true
size = Vector2(96, 220)

[sub_resource type="Resource" id="Resource_4qcyh"]
resource_local_to_scene = true
resource_name = "health"
script = ExtResource("7_spm5b")
max = 100
value = 100
name = &"health"
displayName = "Health"

[node name="BossEntity" type="CharacterBody2D"]
collision_layer = 8
collision_mask = 126
script = ExtResource("1_bhu65")

[node name="Sprites" type="Node2D" parent="."]
position = Vector2(0, -2)

[node name="Fire" type="AnimatedSprite2D" parent="Sprites"]
position = Vector2(10, 24)
scale = Vector2(0.75, 0.75)
sprite_frames = SubResource("SpriteFrames_qgdtj")
autoplay = "default"
frame_progress = 0.13918673

[node name="Inside" type="Sprite2D" parent="Sprites"]
texture = ExtResource("2_0bd57")

[node name="Base" type="Sprite2D" parent="Sprites"]
texture = ExtResource("2_v6qt5")

[node name="Panels" type="Sprite2D" parent="Sprites"]
visible = false
texture = ExtResource("5_7lwut")

[node name="Beak" type="Sprite2D" parent="Sprites"]
texture = ExtResource("3_mjr86")

[node name="Hat" type="Sprite2D" parent="Sprites"]
visible = false
texture = ExtResource("6_lxm5q")

[node name="FrontGun" type="Sprite2D" parent="Sprites"]
position = Vector2(102, 38)
texture = ExtResource("7_u1ua6")

[node name="BackGun" type="Sprite2D" parent="Sprites"]
z_index = -1
texture_filter = 1
position = Vector2(-2, 2)
texture = ExtResource("7_u1ua6")

[node name="Dad" type="Sprite2D" parent="Sprites"]
texture = ExtResource("8_ka5rd")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(19, -4)
shape = SubResource("RectangleShape2D_8iuf5")

[node name="FactionComponent" parent="." instance=ExtResource("3_4faen")]
factions = 8

[node name="GunComponent" parent="." instance=ExtResource("10_vejfc")]
isEnabled = false
bulletEntity = ExtResource("5_g6b7d")
cooldown = 0.01

[node name="DamageReceivingComponent" parent="." instance=ExtResource("6_c8x7c")]
position = Vector2(96, 0)

[node name="ReceivingCollisionShape" parent="DamageReceivingComponent" index="0"]
position = Vector2(-48, 0)
shape = SubResource("RectangleShape2D_alspo")

[node name="DamageComponent" parent="." instance=ExtResource("7_g6b7d")]
friendlyFire = true

[node name="HealthComponent" parent="." instance=ExtResource("5_sns8m")]
health = SubResource("Resource_4qcyh")

[node name="CharacterBodyComponent" parent="." instance=ExtResource("17_v0t4e")]

[node name="InputComponent" parent="." instance=ExtResource("12_5vyxp")]

[node name="State" type="Label" parent="."]
anchors_preset = -1
offset_top = -121.0
offset_right = 42.0
offset_bottom = -113.0
text = "State: "

[node name="CurrentState" type="Label" parent="State"]
layout_mode = 0
offset_left = 39.0
offset_right = 103.0
offset_bottom = 8.0

[editable path="GunComponent"]
[editable path="DamageReceivingComponent"]
